--- a/app/src/main/res/drawable/msg_rec.xml
+++ b/app/src/main/res/drawable/msg_rec.xml
@@ -6,7 +6,7 @@
         android:width="1dp"
         android:color="@color/colorPrimaryDark" />
 
-    <solid android:color="#EFF2F4" />
+    <solid android:color="#FFFFFF" />
     <corners
         android:bottomLeftRadius="18dp"
         android:bottomRightRadius="12dp"
