--- a/app/src/main/res/layout/activity_admin_user_editor.xml
+++ b/app/src/main/res/layout/activity_admin_user_editor.xml
@@ -54,6 +54,16 @@
                 android:textAllCaps="true"
                 android:textSize="20sp"
                 android:textStyle="normal" />
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/user_role"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:includeFontPadding="false"
+                android:textAllCaps="true"
+                android:textSize="20sp"
+                android:textStyle="normal" />
 
 
         </RelativeLayout>
