--- a/app/src/main/res/layout/activity_dash_notes_list.xml
+++ b/app/src/main/res/layout/activity_dash_notes_list.xml
@@ -13,31 +13,30 @@
         android:id="@+id/info_card"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_margin="4dp"
         app:layout_constraintTop_toBottomOf="@+id/toll_bar"
         android:clickable="true"
         android:focusable="true"
         app:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="15dp">
+            android:padding="20dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_folder_black_24dp" />
+                android:src="@drawable/ic_folder_open_black_24dp" />
 
             <TextView
+                android:layout_marginStart="5dp"
                 android:id="@+id/tv_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -45,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 tools:ignore="RtlSymmetry" />
         </LinearLayout>
@@ -55,6 +54,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="5dp"
+        android:layout_margin="4dp"
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
