--- a/app/src/main/res/layout/activity_notes_recycle_item.xml
+++ b/app/src/main/res/layout/activity_notes_recycle_item.xml
@@ -29,8 +29,8 @@
 
             <TextView
                 android:id="@+id/notes_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:maxLines="1"
                 android:paddingStart="3dp"
                 android:text="@string/notes"
