--- a/app/src/main/res/layout/grp_rec_item.xml
+++ b/app/src/main/res/layout/grp_rec_item.xml
@@ -51,6 +51,11 @@
                     android:layout_height="wrap_content"
                     android:text="@string/addComment"
                     android:textSize="16sp" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/r_img"
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    />
 
                 <TextView
                     android:textDirection="ltr"
