--- a/app/src/main/res/layout/grp_send_item.xml
+++ b/app/src/main/res/layout/grp_send_item.xml
@@ -57,6 +57,11 @@
                     android:text="@string/addComment"
                     android:textDirection="anyRtl"
                     android:textSize="16sp" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/s_img"
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    />
 
                 <TextView
                     android:id="@+id/s_date"
