--- a/app/src/main/res/layout/activity_admin_show_std.xml
+++ b/app/src/main/res/layout/activity_admin_show_std.xml
@@ -5,17 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".admin_show_std">
 
-    <include layout="@layout/tollbar_layout"/>
+    <include layout="@layout/tollbar_layout" />
 
     <LinearLayout
 
-        android:layout_below="@+id/toll_bar"
         android:id="@+id/li_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toll_bar"
+        android:layout_margin="10dp"
         android:background="@drawable/btn_round"
         android:orientation="vertical"
-        android:layout_margin="10dp"
         android:padding="10dp">
 
         <androidx.appcompat.widget.AppCompatSpinner
@@ -26,11 +26,25 @@
             android:spinnerMode="dropdown" />
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/ed_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/li_spinner"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:hint="@string/enter_name_or_roll_no"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:visibility="invisible"
+        tools:ignore="LabelFor" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@drawable/btn_round"
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/li_spinner" />
+        android:layout_below="@id/ed_search"
+        android:background="@drawable/btn_round"
+        android:visibility="invisible" />
 
 </RelativeLayout>
