--- a/app/src/main/res/layout/activity_dash_notes_upload.xml
+++ b/app/src/main/res/layout/activity_dash_notes_upload.xml
@@ -56,19 +56,20 @@
             android:layout_height="wrap_content"
             android:padding="15dp"
             app:counterEnabled="true"
+            android:hint="@string/filename"
             app:counterMaxLength="20"
             app:hintAnimationEnabled="true">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/file_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/filename"
                 android:importantForAutofill="no"
                 android:inputType="text"
                 android:maxLength="20"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                tools:ignore="LabelFor" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
