--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -86,15 +86,14 @@
                 android:layout_marginBottom="10dp"
                 android:hint="@string/roll_no">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_roll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:drawableStart="@drawable/ic_file_upload_black_24dp"
+                    android:drawableStart="@drawable/ic_person_black_24dp"
                     android:drawablePadding="10dp"
                     android:focusable="false"
-                    android:hint="@string/roll_no"
                     android:importantForAutofill="no"
                     android:inputType="none"
                     android:text="@string/roll_no" />
@@ -108,16 +107,16 @@
                 android:layout_marginBottom="10dp"
                 android:hint="@string/email">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:drawableStart="@drawable/ic_file_upload_black_24dp"
+                    android:drawableStart="@drawable/ic_email_black_24dp"
                     android:drawablePadding="10dp"
                     android:focusable="false"
                     android:importantForAutofill="no"
-                    android:inputType="textEmailAddress"
+                    android:inputType="none"
                     android:text="@string/email"
                     tools:ignore="LabelFor" />
 
@@ -130,12 +129,12 @@
                 android:layout_marginBottom="10dp"
                 android:hint="@string/phone">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:drawableStart="@drawable/ic_file_upload_black_24dp"
+                    android:drawableStart="@drawable/ic_phone_black_24dp"
                     android:drawablePadding="10dp"
                     android:focusable="false"
                     android:importantForAutofill="no"
@@ -156,13 +155,13 @@
                     android:layout_marginBottom="10dp"
                     android:hint="@string/password">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/ed_password"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginEnd="50dp"
                         android:clickable="false"
-                        android:drawableStart="@drawable/ic_file_upload_black_24dp"
+                        android:drawableStart="@drawable/ic_enhanced_encryption_black_24dp"
                         android:drawablePadding="10dp"
                         android:focusable="false"
                         android:importantForAutofill="no"
@@ -191,13 +190,14 @@
                 android:hint="@string/updatePassword"
                 android:visibility="gone">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ed_c_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890$#!_-@"
-                    android:drawableStart="@drawable/ic_file_upload_black_24dp"
+                    android:drawableStart="@drawable/ic_key_black_24dp"
                     android:drawablePadding="10dp"
+                    android:drawableTint="@color/colorAccent"
                     android:importantForAutofill="no"
                     android:inputType="textVisiblePassword"
                     android:maxLength="10"
@@ -215,7 +215,9 @@
                 android:onClick="updatePassword"
                 android:text="@string/updatePassword"
                 android:textStyle="bold"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:icon="@drawable/ic_file_upload_black_24dp"
+                app:iconGravity="textStart" />
 
 
             <com.google.android.material.button.MaterialButton
@@ -223,28 +225,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/bg_box"
-                android:padding="10dp"
+                android:onClick="feedback"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:text="@string/feedback"
                 android:textAlignment="viewStart"
+                android:textColor="#808080"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:icon="@drawable/ic_person_black_24dp" />
+                app:icon="@mipmap/legacy_feedback"
+                app:iconTint="@color/Black"
+                app:iconTintMode="screen" />
 
             <com.google.android.material.button.MaterialButton
-                android:onClick="logout"
+                android:id="@+id/btn_logout"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:drawablePadding="10dp"
-                android:padding="10dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
                 android:text="@string/logout"
                 android:textAlignment="viewStart"
-                android:textColor="#58353131"
+                android:textColor="@android:color/tab_indicator_text"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:icon="@drawable/ic_person_black_24dp"
+                app:icon="@mipmap/legacy_logout"
+                app:iconTint="@color/colorAccent"
+                app:iconTintMode="screen"
                 app:rippleColor="@color/colorAccent" />
 
         </LinearLayout>
